release notes benerator 0.9.3
=============================


Enhancements
------------


Bug Fixes
---------
- Generation of large regex-based strings fails