@@ -1,0 +1,66 @@
+/*
+ * (c) Copyright 2014 by Volker Bergmann. All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, is permitted under the terms of the
+ * GNU General Public License (GPL).
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+ * WITHOUT A WARRANTY OF ANY KIND. ALL EXPRESS OR IMPLIED CONDITIONS,
+ * REPRESENTATIONS AND WARRANTIES, INCLUDING ANY IMPLIED WARRANTY OF
+ * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE OR NON-INFRINGEMENT, ARE
+ * HEREBY EXCLUDED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+ * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+ * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+ * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+ * POSSIBILITY OF SUCH DAMAGE.
+ */
+
+package org.databene.platform.java;
+
+import org.databene.platform.PersonBean;
+
+/**
+ * TODO Document class.<br/><br/>
+ * Created: 13.05.2014 11:52:54
+ * @since TODO version
+ * @author Volker Bergmann
+ */
+
+public class ChildBean extends PersonBean {
+	
+	public int childNo;
+
+	public ChildBean() {
+		this(null, 0, 0);
+	}
+	
+	public ChildBean(String name, int age, int childNo) {
+		super(name, age);
+		this.childNo = childNo;
+	}
+
+	@Override
+	public int hashCode() {
+		return 31 * super.hashCode() + childNo;
+	}
+
+	@Override
+	public boolean equals(Object obj) {
+		if (this == obj)
+			return true;
+		if (!super.equals(obj) || getClass() != obj.getClass())
+			return false;
+		ChildBean that = (ChildBean) obj;
+		return (this.childNo == that.childNo);
+	}
+	
+	@Override
+	public String toString() {
+		return super.toString() + "#" + childNo;
+	}
+	
+}
